# fastapi-beyond-crud-2

./: .env.example  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 68a1cb378cd9_create_users_table.py
src/: app.py  config.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/database/: models.py  session.py
src/examples/: routes.py
src/users/: routes.py  service.py
